ENH: EMSegment4: Added infrastructure to be able to listen for NodeAdded and NodeRemoved events properly in Slicer4.
 - also removed a disturbing line-break in Tcl code in the logic class
 - added some meaningful printouts to the MRMLManager
 - in the Qt version, added the generation of a qSlicerEMSegmentModuleWidgetsPythonQt library to access the widgets in python



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16669 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/CMakeLists.txt
@@ -107,6 +107,7 @@ SET(qt_module_UI_SRCS
 SET(qt_module_target_libraries
   vtkSlicerEMSegmentModuleLogic
   qSlicerEMSegmentModuleWidgets
+  qSlicerEMSegmentModuleWidgetsPythonQt
   vtkCharts
   vtkSlicerAnnotationModuleMRML
   MRMLLogic
