--- a/Modules/EMSegment/Qt/Py/EMSegmentPyWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentPyWizard/CMakeLists.txt
@@ -1,17 +1,17 @@
-SET(EMSegmentWizard_PYTHON_SCRIPTS
+SET(EMSegmentPyWizard_PYTHON_SCRIPTS
   __init__.py
   EMSegmentPyStep.py
   EMSegmentPyStepOne.py
   EMSegmentPyStepTwo.py    
   )
 
-SET(EMSegmentWizard_PYTHON_RESOURCES
+SET(EMSegmentPyWizard_PYTHON_RESOURCES
   )
   
 ctkMacroCompilePythonScript(
-  TARGET_NAME EMSegmentWizard
-  SCRIPTS "${EMSegmentWizard_PYTHON_SCRIPTS}"
-  RESOURCES "${EMSegmentWizard_PYTHON_RESOURCES}"
+  TARGET_NAME EMSegmentPyWizard
+  SCRIPTS "${EMSegmentPyWizard_PYTHON_SCRIPTS}"
+  RESOURCES "${EMSegmentPyWizard_PYTHON_RESOURCES}"
   DESTINATION_DIR ${Slicer_BINARY_DIR}/bin/Python/EMSegmentPyWizard
   INSTALL_DIR ${Slicer_INSTALL_BIN_DIR}
   )
