ENH: Adding demo mode
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16670 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/OpenIGTLinkIF/CMakeLists.txt
+++ b/Modules/OpenIGTLinkIF/CMakeLists.txt
@@ -89,6 +89,7 @@ set(OpenIGTLinkIF_SRCS
   vtkIGTLToMRMLImage.cxx
   vtkIGTLToMRMLPosition.cxx
   vtkMRMLIGTLConnectorNode.cxx
+  vtkIGTLTestWindow.cxx
 )
 
 if (OpenIGTLink_PROTOCOL_VERSION EQUAL 2)
