ENH: EMSegment4: Added the mrml connection to the python wizard.
 - added some required methods to the logic and the mrmlManager to be included in the python wrapping for Slicer4
 - changed the way the qSlicerApplication is instantiated in the commonSlicerInterface
 - tracked down vtk hashtable segfault in EMSegment4 CommandlineTool (tcl/EMSegmentAutoSample.tcl:429)
 - some style cleanup for the logic class




git-svn-id: http://svn.slicer.org/Slicer3/trunk@16676 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/EMSegmentPyWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentPyWizard/CMakeLists.txt
@@ -1,8 +1,11 @@
 SET(EMSegmentPyWizard_PYTHON_SCRIPTS
   __init__.py
+  Helper.py
   EMSegmentPyStep.py
   EMSegmentPyStepOne.py
-  EMSegmentPyStepTwo.py    
+  EMSegmentPyStepTwo.py
+  EMSegmentPyStepThree.py 
+  EMSegmentPyDummyStep.py  
   )
 
 SET(EMSegmentPyWizard_PYTHON_RESOURCES
