ENH: Remove Log.cxx
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16682 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Algorithm/LLSBiasCorrector/CMakeLists.txt
+++ b/Modules/EMSegment/Algorithm/LLSBiasCorrector/CMakeLists.txt
@@ -12,12 +12,12 @@ ENDIF (USE_ITK_FILE)
 
 ADD_EXECUTABLE(test
   test.cxx
-  Log.cxx
+#  Log.cxx
 )
 
 ADD_EXECUTABLE(bias
   bias.cxx
-  Log.cxx
+#  Log.cxx
 )
 
 TARGET_LINK_LIBRARIES(bias ${ITK_LIBRARIES})
