ENH: EMSegment4: Switched to the new CMake macros and variables.
Also changed the python wizard to correctly reflect the inputchannelList and the AnatomicalStructures for a loaded task.



git-svn-id: http://svn.slicer.org/Slicer3/trunk@16689 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/CMakeLists.txt
@@ -11,6 +11,6 @@ ctkMacroCompilePythonScript(
   TARGET_NAME EMSegmentPy
   SCRIPTS "${EMS_PYTHON_SCRIPTS}"
   RESOURCES "${EMS_PYTHON_RESOURCES}"
-  DESTINATION_DIR ${Slicer_BINARY_DIR}/${Slicer_INSTALL_QTSCRIPTEDMODULES_LIB_DIR}
-  INSTALL_DIR ${Slicer_INSTALL_LIB_DIR}
+  DESTINATION_DIR ${Slicer_BINARY_DIR}/${Slicer_QTSCRIPTEDMODULES_LIB_DIR}
+  INSTALL_DIR ${Slicer_INSTALL_ROOT}
   )
