COMP: EMSegment4: Pathes got lost during merge. Fixed now.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16701 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
@@ -1,21 +1,23 @@
-SET(EMSegmentPyWizard_PYTHON_SCRIPTS
+SET(EMSegmentWizard_PYTHON_SCRIPTS
   __init__.py
   Helper.py
-  EMSegmentPyStep.py
-  EMSegmentPyStepOne.py
-  EMSegmentPyStepTwo.py
-  EMSegmentPyStepThree.py 
-  EMSegmentPyDummyStep.py  
+  EMSegmentStep.py
+  EMSegmentSelectTaskStep.py
+  EMSegmentDefineInputChannelsStep.py
+  EMSegmentDefineAnatomicalTreeStep.py
+  EMSegmentDefineAtlasStep.py 
+  EMSegmentEditRegistrationParametersStep.py
+  EMSegmentDummyStep.py  
   )
 
-SET(EMSegmentPyWizard_PYTHON_RESOURCES
+SET(EMSegmentWizard_PYTHON_RESOURCES
   )
   
 ctkMacroCompilePythonScript(
-  TARGET_NAME EMSegmentPyWizard
-  SCRIPTS "${EMSegmentPyWizard_PYTHON_SCRIPTS}"
-  RESOURCES "${EMSegmentPyWizard_PYTHON_RESOURCES}"
-  DESTINATION_DIR ${Slicer_BINARY_DIR}/bin/Python/EMSegmentPyWizard
+  TARGET_NAME EMSegmentWizard
+  SCRIPTS "${EMSegmentWizard_PYTHON_SCRIPTS}"
+  RESOURCES "${EMSegmentWizard_PYTHON_RESOURCES}"
+  DESTINATION_DIR ${Slicer_BINARY_DIR}/bin/Python/EMSegmentWizard
   INSTALL_DIR ${Slicer_INSTALL_BIN_DIR}/Python
   )
 
