--- a/Modules/EMSegment/Testing/CMakeLists.txt
+++ b/Modules/EMSegment/Testing/CMakeLists.txt
@@ -203,7 +203,7 @@ if(NOT DISABLE_CXX_TESTING)
   
     set(Slicer3_EXE ${Slicer_BINARY_DIR}/Slicer4)
     set(WRAPPED_TEST_EXE_PREFIX --launch ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
-    set(WRAPPED_EXE_PREFIX --launch ${Slicer_BINARY_DIR}/${Slicer_INSTALL_PLUGINS_BIN_DIR})
+    set(WRAPPED_EXE_PREFIX --launch ${Slicer_BINARY_DIR}/${Slicer_PLUGINS_BIN_DIR})
     if(WIN32)
       set(WRAPPED_EXE_PREFIX ${WRAPPED_EXE_PREFIX}/${CMAKE_BUILD_TYPE})
       set(WRAPPED_TEST_EXE_PREFIX ${WRAPPED_TEST_EXE_PREFIX}/${CMAKE_BUILD_TYPE})
