ENH:Adding DTIimport DTIexport CLI modules for converting tensor data to various file formats
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16717 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Applications/CLI/CMakeLists.txt
+++ b/Applications/CLI/CMakeLists.txt
@@ -687,6 +687,25 @@ slicer3_set_plugins_output_path(${CLP})
 target_link_libraries (${CLP} ${CLP}Lib)
 
 #####################
+set (CLP DTIimport)
+
+set (${CLP}_SOURCE ${CLP}.cxx)
+generateclp(${CLP}_SOURCE ${CLP}.xml)
+
+add_executable(${CLP} ${${CLP}_SOURCE})
+slicer3_set_plugins_output_path(${CLP})
+target_link_libraries (${CLP} ${ITK_LIBRARIES})
+
+#####################
+set (CLP DTIexport)
+
+set (${CLP}_SOURCE ${CLP}.cxx)
+generateclp(${CLP}_SOURCE ${CLP}.xml)
+
+add_executable(${CLP} ${${CLP}_SOURCE})
+slicer3_set_plugins_output_path(${CLP})
+target_link_libraries (${CLP} ${ITK_LIBRARIES})
+
 
 # culled from Slicer 3.6 release
 #set (CLP ZeroCrossingBasedEdgeDetectionImageFilter)
@@ -856,6 +875,8 @@ if (Slicer3_SOURCE_DIR)
     DiffusionTensorEstimation
     BSplineToDeformationField
     BSplineToDeformationFieldLib
+    DTIimport
+    DTIexport
     )
 
   slicer3_install_plugins(${TARGETS})
