ENH: EMSegment: Added dynamic frame creation for Slicer4.
 * The dynamic frame creation now runs through the SlicerCommonInterface for both Slicer3 and Slicer4
 * Dynamic frames are shown properly in Slicer3 and Slicer4
 * Fixed warning in EMSegmentTclInterpreter
 * Fixed --no-error-popup flag in EMSegment tests for Slicer4
 


git-svn-id: http://svn.slicer.org/Slicer3/trunk@16721 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
+++ b/Modules/EMSegment/Qt/Py/EMSegmentWizard/CMakeLists.txt
@@ -1,6 +1,7 @@
 SET(EMSegmentWizard_PYTHON_SCRIPTS
   __init__.py
   Helper.py
+  EMSegmentDynamicFrame.py
   EMSegmentStep.py
   EMSegmentSelectTaskStep.py                        # step 1
   EMSegmentDefineInputChannelsStep.py               # step 2
