COMP: EMSegment4: Include the find_package of the Slicer Execution Model due to recent changes in Slicer4.
git-svn-id: http://svn.slicer.org/Slicer3/trunk@16731 3bd1e089-480b-0410-8dfb-8563597acbee

--- a/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
+++ b/Modules/EMSegment/CommandLineApplication/CMakeLists.txt
@@ -32,7 +32,8 @@ if(NOT EM_Slicer4_FOUND)
 else(NOT EM_Slicer4_FOUND)
 
   # Slicer4
-
+  find_package(SlicerExecutionModel REQUIRED GenerateCLP)
+  
   set(COMMANDLINE_LINK_LIBRARIES
     vtkCommon
     vtkSlicerAtlasCreatorModuleLogic
